# pytest-whirlwind

./: AUTHORS.rst  README.rst  pyproject.toml  requirements.txt
doc/: conf.py  index.rst
pytest_whirlwind/: plugin.py
